--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@ body {
 }
 
 .hero-unit {
+  // filter: blur(2px);
   margin: 50px auto 0 auto;
   width: 300px;
   font-size: 18px;
@@ -23,6 +24,10 @@ body {
   background-color: #eee;
   border-radius: 6px;
   padding: 60px;
+  transition: .5s;
+  &:hover {
+    // filter: none;
+  }
   h1 {
     font-size: 60px;
     line-height: 1;
