--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,35 +2,75 @@
 // endbower
 
 .browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+	margin: 0.2em 0;
+	background: #ccc;
+	color: #000;
+	padding: 0.2em 0;
 }
 
 body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
+	background: #fafafa;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: #333;
 }
 
 .hero-unit {
-  // filter: blur(2px);
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  transition: .5s;
-  &:hover {
-    // filter: none;
-  }
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+
+	margin: 50px auto 0 auto;
+	width: 300px;
+	font-size: 18px;
+	font-weight: 200;
+	line-height: 30px;
+	background-color: #eee;
+	border-radius: 6px;
+	padding: 60px;
+
+	h1 {
+		font-size: 60px;
+		line-height: 1;
+		letter-spacing: -1px;
+	}
+	fieldset {
+		border: none;
+		padding: 0;
+		ul {
+			list-style: none;
+			outline: none;
+			padding: 0;
+			li {
+				margin: 0 50px;
+			}
+			label {
+				font-size: 10px;
+				padding: 0;
+			}
+			input {
+				border: none;
+				border-radius: 2px;
+				font-size: 10px;
+				height: 22px;
+				&:focus {
+					outline: none;
+				}
+			}
+		}
+	}
+	button {
+		width: 100%;
+		margin: 0 auto;
+		background: #bbb9b9;
+		outline: none;
+		height: 30px;
+		border: none;
+		border-radius: 6px;
+		&:hover {
+			background: #EFF0D1;
+			filter: drop-shadow(2px 4px 10px #0F1108);
+		}
+	}
+
+}
+
+#latitude {
+	margin: 0 8px;
 }
