--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ body {
 	line-height: 30px;
 	background-color: #eee;
 	border-radius: 6px;
-	padding: 60px;
+	padding: 30px 60px 60px 60px;
 
 	h1 {
 		font-size: 60px;
@@ -32,23 +32,26 @@ body {
 	}
 	fieldset {
 		border: none;
-		padding: 0;
+		padding: 0 0 20px 0;
 		ul {
 			list-style: none;
 			outline: none;
 			padding: 0;
 			li {
 				margin: 0 50px;
+				width: 200px;
 			}
 			label {
 				font-size: 10px;
-				padding: 0;
+				padding: 0 75px;
 			}
 			input {
+				width: 100%;
 				border: none;
 				border-radius: 2px;
 				font-size: 10px;
 				height: 22px;
+				padding: 5px 8px;
 				&:focus {
 					outline: none;
 				}
@@ -67,10 +70,9 @@ body {
 			background: #EFF0D1;
 			filter: drop-shadow(2px 4px 10px #0F1108);
 		}
+		&:active {
+			transform: translateY(2px);
+		}
 	}
 
-}
-
-#latitude {
-	margin: 0 8px;
 }
