darksky api request wip

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ body {
 	line-height: 30px;
 	background-color: #eee;
 	border-radius: 6px;
-	padding: 30px 60px 60px 60px;
+	padding: 20px 60px 60px 60px;
 
 	h1 {
 		font-size: 60px;
@@ -60,7 +60,7 @@ body {
 	}
 	button {
 		width: 100%;
-		margin: 0 auto;
+		margin: 0px auto;
 		background: #bbb9b9;
 		outline: none;
 		height: 30px;
